# snake-with-rl

./: .gitignore  README.md  main.py  play.py  play_saved_model.py  pyproject.toml  setup.py
snake_env/: __init__.py
snake_env/envs/: __init__.py  snake_env.py
src/scripts/: play.py  play_saved_model.py
src/snake_env/: __init__.py  snake_env.py
src/snake_env/envs/: snake_env.py
training/: train.py  train_atari.py  train_atari_model.py  train_with_rnd.py
training/lib/: atari_config.py  atari_model.py  env_wrappers.py  model.py  noisy.py
training/ppo/: train_ppo.py  train_ppo_simple.py  trochrl.ipynb
training/ppo_transformer/: train.py
training/ppo_transformer/lib/: config.py  env_wrappers.py  model.py  simple_model.py
