[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snake-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium[mujoco]>=0.28.1",
    "matplotlib>=3.10.3",
    "mujoco>=3.3.2",
    "numpy>=1.21.0",
    "pygame>=2.1.0",
    "tensordict>=0.8.3",
    "torchrl>=0.8.1",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
]

[tool.setuptools]
package-dir = {"" = "src"}
